--- a/Backend/.env
+++ b/Backend/.env
@@ -1,8 +1,14 @@
 MONGO_URI=mongodb://localhost:27017/Insurance
 JWT_SECRET=nermine
 
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=nerminajili11@gmail.com
-SMTP_PASS=hvly ykbz ivqg gbzx 
-ADMIN_EMAIL=nerminajili11@gmail.com
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=nerminajili11@gmail.com
+# SMTP_PASS=hvly ykbz ivqg gbzx 
+# ADMIN_EMAIL=nerminajili11@gmail.com
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=d48aac5f03d174
+SMTP_PASS=06325610bc88e6
+ADMIN_EMAIL=test2user@example.com
+
