--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "framer-motion": "^12.12.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
     "react": "^19.1.0",
