--- a/Backend/.env
+++ b/Backend/.env
@@ -14,7 +14,7 @@ SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USER=d48aac5f03d174
 SMTP_PASS=06325610bc88e6
-SMTP_FROM="Insurance Portal <test2user@example.com>"
+SMTP_FROM="Insurance Portal <support@yomi-assurance.com>"
 
 # Other configuration
 FRONTEND_URL=http://localhost:3000
