--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "jest": "^30.0.4",
+    "jest-junit": "^16.0.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.1.3"
   },
