--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,63 +1,65 @@
 pipeline {
     agent any
-    
+
     stages {
+        // ------------------ Checkout ------------------
         stage('Checkout GitHub') {
             steps {
                 git url: 'https://github.com/Nermineagili/PFE_2025.git', branch: 'main'
-                
             }
         }
 
+        // ------------------ Build Docker Images ------------------
         stage('Build Docker Images') {
             steps {
-                // Build backend image
+                // Backend: production image for deployment
                 dir('backend') {
-                    bat 'docker build -t app_assurance_backend .'
+                    bat 'docker build -t app_assurance_backend:prod --target production .'
                 }
-                // Build Flask backend image
+
+                // Flask backend
                 dir('flask-backend') {
                     bat 'docker build -t app_assurance_flask-backend .'
                 }
-                // Build frontend image
+
+                // Frontend
                 dir('frontend') {
                     bat 'docker build -t app_assurance_frontend .'
                 }
             }
         }
 
+        // ------------------ Start Services ------------------
         stage('Start Services with Docker Compose') {
             steps {
                 bat 'docker-compose up -d'
-                // Ensure docker-compose.yml defines services
             }
         }
 
-stage('Run Tests') {
-    steps {
-        dir('backend') {
-            // Build the backend Docker image using the base stage (with devDependencies)
-            bat 'docker build -t app_assurance_backend --target base .'
+        // ------------------ Run Tests ------------------
+        stage('Run Tests') {
+            steps {
+                dir('backend') {
+                    // Build backend image with devDependencies (base stage)
+                    bat 'docker build -t app_assurance_backend --target base .'
 
-            // Run Jest tests inside the container
-            bat 'docker run --rm app_assurance_backend sh -c "npx jest tests --ci --reporters=default --reporters=jest-junit"'
+                    // Run Jest tests inside the container
+                    bat 'docker run --rm app_assurance_backend sh -c "npx jest tests --ci --reporters=default --reporters=jest-junit"'
+                }
+            }
+            post {
+                always {
+                    // Collect test results for Jenkins
+                    junit 'backend/test-results/jest-junit.xml'
+                }
+            }
         }
-    }
-    post {
-        always {
-            // Collect JUnit test results for Jenkins
-            junit 'backend/test-results/jest-junit.xml'
-        }
-    }
-}
 
-
-
-
+        // ------------------ Deploy ------------------
         stage('Deploy') {
             steps {
                 echo 'App deployed'
-                // Add deployment steps (e.g., push to Docker Hub) as needed
+                // Optional: push Docker images to registry or other deployment steps
             }
         }
     }
