--- a/Backend/package.json
+++ b/Backend/package.json
@@ -38,5 +38,8 @@
     "nodemon": "^3.1.9",
     "supertest": "^7.1.3"
   },
+    "jest-junit": {
+    "output": "./test-results/jest-junit.xml"
+  },
   "description": ""
 }
